--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
         {% endblock %}
     </main>
     
-    <footer>
+    <footer class="container">
         <div class="footer-copyright">
             <div class="container">
                 Copyright © 2021 <a href="https://github.com/TChauruka">TCahuruka</a>
