--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">New How's</a></li>
-                    <li><a href="#">Manage Categories</a></li>
+                    <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Register</a></li>
@@ -39,7 +39,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">New How's</a></li>
-            <li><a href="#">Manage Categories</a></li>
+            <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Register</a></li>
