--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,6 @@
                 <a href="{{ url_for('get_hows')}}" class="brand-logo">How To</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Home</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">New How's</a></li>
                     <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
@@ -36,7 +35,6 @@
             <li>
                 <h4 class="center-align light-blue-text text-darken-4">How To</h4>
             </li>
-            <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">New How's</a></li>
             <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
@@ -47,6 +45,19 @@
         </ul>
     
     </header>
+    <section>
+        <!-- Flash massages-->
+        {% with messages = get_flashed_messages()%}
+             {% if messages%}
+                {% for message in messages%}
+                  <div class="row flashes">
+                      <h4 class="light-blue lighten-4 center-align">{{message}}</h4>
+                  </div>
+                {% endfor %}
+             {% endif %}
+        {% endwith %}
+
+    </section>
 
     <main class="container">
         {% block content %}
