--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       <!-- top navbar -->
         <nav class="nav-extended text-shadow light-blue darken-1">
             <div class="nav-wrapper">
-                <a href="{{ url_for('get_hows')}}" class="brand-logo">How To</a>
+                <a href="{{ url_for('home')}}" class="brand-logo">How To</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#">Profile</a></li>
