--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
                 <a href="{{ url_for('home')}}" class="brand-logo">How To</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
                     <li><a href="#">New How's</a></li>
                     <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login')}}">Log In</a></li>
                     <li><a href="{{ url_for('register')}}">Register</a></li>
                 </ul>
             </div>
