--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
                 <div class="card">
                     <div class="card-image">
                         <img src="https://betanews.com/wp-content/uploads/2016/12/How-to.jpg">
-                        <a href="#" class="card-title text-align-center">{{ category.category_name}}</a>
+                        <a href="{{ url_for('get_hows')}}" class="card-title text-align-center">{{ category.category_name}}</a>
                     </div>
                 </div>
             </div>
