--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
                     <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
                     <li><a href="#">New How's</a></li>
                     <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
-                    <li><a href="#">Log Out</a></li>
-                    <li><a href="{{ url_for('login')}}">Log In</a></li>
+                    <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register')}}">Register</a></li>
                 </ul>
             </div>
@@ -35,11 +35,11 @@
             <li>
                 <h4 class="center-align light-blue-text text-darken-4">How To</h4>
             </li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
             <li><a href="#">New How's</a></li>
             <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('register')}}">Register</a></li>
         
         </ul>
