--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,17 @@
                 <a href="{{ url_for('home')}}" class="brand-logo">How To</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
-                    <li><a href="#">New How's</a></li>
-                    <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
-                    <li><a href="{{ url_for('logout')}}">Log Out</a></li>
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('register')}}">Register</a></li>
+                    {% if session.user %}
+                       <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
+                       <li><a href="#">New How's</a></li>
+                       {% if session.user|lower == "admin"%}
+                          <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
+                       {% endif %}
+                       <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+                    {% else %}
+                       <li><a href="{{ url_for('login') }}">Log In</a></li>
+                       <li><a href="{{ url_for('register')}}">Register</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -35,13 +40,17 @@
             <li>
                 <h4 class="center-align light-blue-text text-darken-4">How To</h4>
             </li>
-            <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
-            <li><a href="#">New How's</a></li>
-            <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
-            <li><a href="{{ url_for('logout')}}">Log Out</a></li>
-            <li><a href="{{ url_for('login') }}">Log In</a></li>
-            <li><a href="{{ url_for('register')}}">Register</a></li>
-        
+            {% if session.user %}
+              <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
+              <li><a href="#">New How's</a></li>
+              {% if session.user|lower == "admin"%}
+                <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
+              {% endif %}
+              <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+            {% else %}
+              <li><a href="{{ url_for('login') }}">Log In</a></li>
+              <li><a href="{{ url_for('register')}}">Register</a></li>
+            {% endif %}
         </ul>
     
     </header>
