--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,12 @@
       <!-- top navbar -->
         <nav class="nav-extended text-shadow light-blue darken-1">
             <div class="nav-wrapper">
-                <a href="{{ url_for('home')}}" class="brand-logo">How To</a>
+                <a href="{{ url_for('get_hows')}}" class="brand-logo">How To</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     {% if session.user %}
                        <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
-                       <li><a href="#">New How's</a></li>
+                       <li><a href="{{ url_for('add_hows')}}">New How's</a></li>
                        {% if session.user|lower == "admin"%}
                           <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
                        {% endif %}
@@ -42,7 +42,7 @@
             </li>
             {% if session.user %}
               <li><a href="{{ url_for('profile',username=session['user'])}}">Profile</a></li>
-              <li><a href="#">New How's</a></li>
+              <li><a href="{{ url_for('add_hows')}}">New How's</a></li>
               {% if session.user|lower == "admin"%}
                 <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
               {% endif %}
