--- a/templates/get_categories.html
+++ b/templates/get_categories.html
@@ -15,6 +15,9 @@
                     <div class="card-content white-text">
                         <span class="card-title">{{ category.category_name}}</span>    
                     </div>
+                    <div class="card-action">
+                        <a href="{{ url_for('edit_category',category_id=category._id)}}"  class="btn-large green accent-4 text-shadow">Edit</a>
+                    </div>
                 </div>
             </div>
         {% endfor %}    
