--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -18,6 +18,9 @@
                 <button class="btn-large light-blue darken-1 text-shadow" type="submit" name="">
                     Add Category <i class="fas fa-plus-square right"></i>
                 </button>
+                <a href="{{url_for('get_categories')}}" class="btn-large red text-shadow">Cancel 
+                   <i class="fas fa-times-circle right"></i>
+                </a>
             </div>
         </form>
     </div>
