Add a 500 error handler and changed css path to error.css

--- a/templates/500.html
+++ b/templates/500.html
@@ -15,8 +15,8 @@
     </g>
 </svg>
 <div class="message-box">
-  <h1>404</h1>
-  <p>Page not found</p>
+  <h1>500</h1>
+  <p>Sever Error</p>
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a href="{{ url_for('get_hows')}}" class="btn-large light-blue darken-1 text-shadow">Go to Home Page</a>
