add a delete function to remove data from the database

--- a/templates/add_hows.html
+++ b/templates/add_hows.html
@@ -23,7 +23,7 @@
                     <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4 "></i>
                     <input id="hows_title"" name="hows_title"" 
                       minlength="5" maxlength="50" type="text" class="validate" required>
-                    <label for="hows_title">Hows Title</label>
+                    <label for="hows_title">How's Title</label>
                 </div>
             </div>
             <!-- tesk describtion -->
