--- a/templates/get_categories.html
+++ b/templates/get_categories.html
@@ -10,17 +10,19 @@
     </div>
     <div class="row">
        {% for category in categories %}
-          <div class="col s12 m3">
-                <div class="card light-blue darken-4 text-shadow center-align">
-                    <div class="card-content white-text">
-                        <span class="card-title">{{ category.category_name}}</span>    
-                    </div>
-                    <div class="card-action">
-                        <a href="{{ url_for('edit_category',category_id=category._id)}}"  class="btn-large green accent-4 text-shadow">Edit</a>
-                        <a href="{{ url_for('delete_category',category_id=category._id)}}" class="btn-large red darken-1 text-shadow">Delete</a>
-                    </div>
+        <div class="col s12 m3">
+            <div class="card light-blue darken-4 text-shadow center-align">
+                <div class="card-content white-text">
+                    <span class="card-title">{{ category.category_name}}</span>
+                </div>
+                <div class="card-action">
+                    <a href="{{ url_for('edit_category',category_id=category._id)}}"
+                        class="btn-large green accent-4 text-shadow">Edit</a>
+                    <a href="{{ url_for('delete_category',category_id=category._id)}}"
+                                class="btn-large red darken-1 text-shadow center-align">Delete</a>
                 </div>
             </div>
+        </div>
         {% endfor %}    
     </div>
 {% endblock %}
