--- a/templates/get_hows.html
+++ b/templates/get_hows.html
@@ -17,6 +17,7 @@
 
                 <div class="col s3">
                     {% if session.user|lower == how.created_by|lower %}
+                        <a href="{{ url_for('delete_hows', hows_id= how._id) }}" class="btn-small red accent-4">Remove</a>
                         <a href="{{ url_for('edit_hows', hows_id=how._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     {% endif %}
                 </div>
