--- a/templates/get_hows.html
+++ b/templates/get_hows.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <div class="row card-panel  blue-grey lighten-5 ">
+        <form action="{{ url_for('search')}}" method="post" class="col s12">
+            <div class="row valign-wrapper center center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <input type="text" name="query" minlength="3" id="query" class="validate" required>
+                    <label for="query">Search How To</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_hows')}}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="light-blue darken-1 btn text-shadow">
+                        <i class="fas fa-search left"></i>Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+    {% if hows|length > 0 %}
     <ul class="collapsible popout">
         {% for how in hows %}
         <li>
@@ -26,5 +43,13 @@
         </li>
         {% endfor %}
     </ul>
+    {% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_hows' )}}" class="btn-large light-blue darken-2 text-shadow">
+                Add It <i class="fas fa-plus-square right"></i>
+            </a>
+        </div>
+    {% endif%}
 
 {% endblock %}
