fix error found while checking validation

--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -18,7 +18,7 @@
                 <a href="{{url_for('get_categories')}}" class="btn-large red text-shadow">Cancel 
                    <i class="fas fa-times-circle right"></i>
                 </a>
-                <button class="btn-large light-blue darken-1 text-shadow" type="submit" name="">
+                <button class="btn-large light-blue darken-1 text-shadow" type="submit" >
                     Edit Category <i class="fas fa-edit right"></i>
                 </button>
             </div>
