--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <title>How to</title>
 </head>
 <body>
-
+    
     <header>
       <!-- top navbar -->
         <nav class="nav-extended text-shadow light-blue darken-1">
@@ -75,7 +75,7 @@
     
     <footer class="container">
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container center-align">
                 Copyright © 2021 <a href="https://github.com/TChauruka">TCahuruka</a>
             </div>
         </div>
