--- a/templates/edit_hows.html
+++ b/templates/edit_hows.html
@@ -47,7 +47,7 @@
                 <a href="{{url_for('get_hows')}}" class="btn-large red text-shadow">Cancel 
                    <i class="fas fa-times-circle right"></i>
                 </a>
-                <button class="btn-large light-blue darken-1 text-shadow" type="submit" name="">
+                <button class="btn-large light-blue darken-1 text-shadow" type="submit" >
                     Edit Hows <i class="fas fa-edit right"></i>
                 </button>
             </div>
